@@ -1,5 +1,6 @@
 Version 2.02.29 -
 ==================================
+  Fix a bug in lvm_dump.sh checks for lvm/dmsetup binaries.
   Refactor lvcreate stripe and mirror parameter validation.
   All tools: print --help output to stdout, not stderr.
   After a diagnostic, suggest --help, rather than printing all --help output.
